--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ionic-native/paypal": "^5.36.0",
     "@ionic/angular": "^5.5.2",
     "com.paypal.cordova.mobilesdk": "^3.5.0",
+    "cordova-plugin-inappbrowser": "^5.0.0",
     "ng2-search-filter": "^0.5.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
