--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@ionic/angular": "^5.5.2",
     "com.paypal.cordova.mobilesdk": "^3.5.0",
     "cordova-plugin-inappbrowser": "^5.0.0",
+    "cordova-plugin-wkwebview-ionic-xhr": "^2.1.1",
     "ng2-search-filter": "^0.5.1",
     "rxjs": "~6.6.0",
     "swiper": "^7.3.2",
@@ -88,7 +89,8 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-inappbrowser": {}
+      "cordova-plugin-inappbrowser": {},
+      "cordova-plugin-lottie-splashscreen": {}
     },
     "platforms": [
       "ios"
